--- a/src/index.njk
+++ b/src/index.njk
@@ -27,13 +27,13 @@
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta property="og:title" content="{{ site.title }}" />
 		<meta property="og:description" content="{{ site.description }}" />
-		<meta property="og:image" content="{{ url }}/assets/{{ site.logo }}" />
+		<meta property="og:image" content="{{ url }}/{{ site.logo }}" />
 
-		<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
-		<link rel="manifest" href="/assets/site.webmanifest" />
-		<link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#5bbad5" />
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+		<link rel="manifest" href="site.webmanifest" />
+		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5" />
 	</head>
 	<body>
 		<main class="h-full flex flex-col">
@@ -150,6 +150,8 @@
 				</div>
 			</div>
 		</main>
-		<script src="/scripts/index.js"></script>
+		<script>
+            {{ inlined.js.mailto | safe }}
+        </script>
 	</body>
 </html>
