--- a/src/index.njk
+++ b/src/index.njk
@@ -76,7 +76,6 @@
 						<label for="recipient" class="text-base text-gray font-semibold pl-4">To:</label>
 						<input
 							id="recipient"
-							tabindex="1"
 							name="recipient"
 							class="appearance-none py-4 h-full block w-full bg-transparent border-none pl-4 text-base"
 							type="email"
@@ -84,10 +83,10 @@
 							multiple
 						/>
 						<div class="mr-4">
-							<button id="cc-button" tabindex="6">Cc:</button>
+							<button id="cc-button">Cc:</button>
 						</div>
 						<div class="mr-4">
-							<button id="bcc-button" tabindex="7">Bcc:</button>
+							<button id="bcc-button">Bcc:</button>
 						</div>
 					</div>
 					<div id="cc-section" class="hidden">
@@ -96,7 +95,6 @@
 							<input
 								id="cc"
 								name="cc"
-								tabindex="2"
 								class="appearance-none py-4 h-full block w-full bg-transparent border-none pl-4 text-base"
 								type="email"
 								multiple
@@ -109,7 +107,6 @@
 							<input
 								id="bcc"
 								name="bcc"
-								tabindex="3"
 								class="appearance-none py-4 h-full block w-full bg-transparent border-none pl-4 text-base"
 								type="email"
 								multiple
@@ -120,7 +117,6 @@
 						<label for="subject" class="text-base font-bold text-gray pl-4">Subject:</label>
 						<input
 							id="subject"
-							tabindex="4"
 							name="subject"
 							class="appearance-none py-4 h-full block w-full bg-transparent border-none pl-4 text-base"
 							type="text"
@@ -133,7 +129,6 @@
 					<label for="body" class="text-base text-gray font-semibold pl-4 block">Body:</label>
 					<textarea
 						aria-label="message"
-						tabindex="5"
 						id="body"
 						name="body"
 						class="h-[95%] p-4 w-full appearance-none bg-transparent border-none text-base leading-normal placeholder:text-[#777777]"
