fix: increase lightswitch size

--- a/src/index.njk
+++ b/src/index.njk
@@ -41,11 +41,11 @@
 				<div class="w-full flex flex-row justify-end">
 					<button
 						id="lightswitch"
-						class="bg-transparent border-none p-0 w-5 h-5 transition-transform ease-[ease] duration-300 hover:rotate-180 focus:[outline:none]"
+						class="bg-transparent border-none p-0 w-10 h-10 transition-transform ease-[ease] duration-300 hover:rotate-180 focus:[outline:none]"
 						type="button"
 						aria-label="Toggle light/dark mode"
 					>
-						<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+						<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="p-2">
 							<g fill="none" fill-rule="evenodd">
 								<path
 									class="fill-bg-black dark:fill-white"
